--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-datepicker": "^7.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-datepicker": "^8.4.0",
+    "react-dom": "^18.3.1",
+    "react-is": "^19.1.0",
+    "recharts": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
